--- a/SimTECH/SimTECH/Components/SimProgressLinear.razor
+++ b/SimTECH/SimTECH/Components/SimProgressLinear.razor
@@ -6,9 +6,10 @@
 </div>
 
 @code {
-    [Parameter, EditorRequired] public List<(int, string)> Bars { get; set; }
+    [Parameter, EditorRequired]
+    public List<(double, string)> Bars { get; set; }
 
-    private string _barStyle(int size, string colour)
+    private string _barStyle(double size, string colour)
     {
         return $"width: {size}%; background-color: {colour}";
     }
