--- a/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonDrivers.razor
@@ -30,7 +30,7 @@
             <PropertyColumn Property="e => e!.Attack" Title="Attack" />
             <PropertyColumn Property="e => e!.Defense" Title="Defense" />
             <PropertyColumn Property="e => e!.TeamRole" Title="Role" />
-            <TemplateColumn T="SeasonDriver" Title="Team">
+            <TemplateColumn T="SeasonDriver" Title="Team" SortBy="e => e.SeasonTeam?.Name">
                 <CellTemplate>
                     @if (context.Item.SeasonTeam == null)
                     {
