--- a/SimTECH/SimTECH/Components/SignalIcon.razor
+++ b/SimTECH/SimTECH/Components/SignalIcon.razor
@@ -6,7 +6,7 @@
 
 @code {
     [Parameter]
-    public int LapPercentage { get; set; }
+    public double LapPercentage { get; set; }
     [Parameter]
     public string Signal { get; set; }
     [Parameter]
