Moved some files over

--- a/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/DevelopmentEntrants.razor
@@ -60,11 +60,11 @@
                         </div>
                     }
 
-                    <MudButton Variant="Variant.Filled"
+                    @*<MudButton Variant="Variant.Filled"
                                Color="Color.Info"
                                StartIcon="@Icons.Material.Filled.Refresh">
                         Load
-                    </MudButton>
+                    </MudButton>*@
                 </MudStack>
             </MudPaper>
             <MudPaper>
