--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -6,11 +6,11 @@
 {
     <MudTabs Outlined="true" Centered="true">
         <MudTabPanel Text="Standings">
-            <MudGrid Spacing="4">
+            <MudGrid Spacing="2">
                 <MudItem xs="12">
-                    <MudPaper Height="100px" Class="py-2">
+                    <MudPaper Height="75px" Class="pa-4">
                         <MudStack Row="true" Justify="Justify.Center">
-                            <MudText Typo="Typo.h5">Season standings</MudText>
+                            <MudText Typo="Typo.h4">Season standings</MudText>
                         </MudStack>
                     </MudPaper>
                 </MudItem>
