--- a/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
@@ -45,14 +45,18 @@
                     <MudNumericField T="int" @bind-Value="Model.CarReliability" Label="CarReliability" />
                     <MudNumericField T="int" @bind-Value="Model.EngineReliability" Label="EngineReliability" />
                 </MudItem>
-                <MudItem xs="3">
-                    <MudNumericField T="int" @bind-Value="Model.WearMax" Label="WearMax" />
-                    <MudNumericField T="int" @bind-Value="Model.WearMin" Label="WearMin" />
-                </MudItem>
-                <MudItem xs="3">
-                    <MudNumericField T="int" @bind-Value="Model.RngMin" Label="RngMin" />
-                    <MudNumericField T="int" @bind-Value="Model.RngMax" Label="RngMax" />
-                    <MudSwitch @bind-Checked="Model.ForWetConditions" Label="Only applies during wet conditions" Color="Color.Tertiary" />
+                <MudItem xs="6">
+                    <MudStack>
+                        <MudStack Row="true">
+                            <MudNumericField T="int" @bind-Value="Model.WearMax" Label="WearMax" />
+                            <MudNumericField T="int" @bind-Value="Model.WearMin" Label="WearMin" />
+                        </MudStack>
+                        <MudStack Row="true">
+                            <MudNumericField T="int" @bind-Value="Model.WearMax" Label="WearMax" />
+                            <MudNumericField T="int" @bind-Value="Model.WearMin" Label="WearMin" />
+                        </MudStack>
+                        <MudSwitch @bind-Checked="Model.ForWetConditions" Label="Only applies during wet conditions" Color="Color.Tertiary" />
+                    </MudStack>
                 </MudItem>
             </MudGrid>
         </MudForm>
